--- a/sites/all/themes/mts/scss/base/_icons.scss
+++ b/sites/all/themes/mts/scss/base/_icons.scss
@@ -24,6 +24,9 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+.icon-cart-added:before {
+  content: "\e906";
+}
 .icon-cart:before {
   content: "\e903";
 }
